--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -551,8 +551,12 @@ subtitle:
   startDelay: 300 # 开始延迟
   typeSpeed: 100 # 打字速度
   backSpeed: 50 # 删除速度
-  sub1: 从来没有真正的绝境, 只有心灵的迷途
-  sub2: Never really desperate, only the lost of the soul
+  sub1: 志之所向，金石为开，谁能御之？
+  sub2: 花开不是为了花落，而是为了开的更加灿烂。
+  sub3: 没有伞的孩子必须努力奔跑！
+  sub4: 欲望以提升热忱，毅力以磨平高山。
+  sub5: 如果放弃太早，你永远都不知道自己会错过什么。
+  sub6: 没有礁石，就没有美丽的浪花；没有挫折，就没有壮丽的人生。
 
 # 手机二级菜单.
 navMenu:
