--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 程序员带你看世界
+title: 生财之策
 subtitle: '承蒙遇见，三生有幸'
 description: '专注分享，程序员带你看不一样的世界，让技术成为第一生产力!'
 keywords: "孵化岛 知识付费 互联网技术 分享 程序员"
